--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,12 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Distributed System</name>
+
+  <properties>
+    <sonar.organization>vepo-github</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  </properties>
+
   <modules>
     <module>leader-election</module>
   </modules>
