--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,9 @@
 name: Build
-on: [push]
+on:
+  push:
+    branches:
+      - main        # The default branch
+      - '*'         # The other branches to be analyzed
 jobs:
   build:
     name: Build
