--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           BASE_BRANCH: ${{ github.base_ref }}
-        run: mvn -B verify sonar:sonar \
-                              -Dsonar.projectKey=vepo_distributed-system \
-                              -Dsonar.branch.name=${BASE_BRANCH} \
-                              -Dsonar.branch.target=main
+        run: mvn -B verify sonar:sonar  -Dsonar.projectKey=vepo_distributed-system
